--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portal-core",
+  "name": "gg",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
@@ -22,16 +22,24 @@
     "@angular/router": "^7.2.2",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
-    "@ionic-native/sqlite": "^5.5.1",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
-    "@ionic/storage": "^2.2.0",
-    "cordova-browser": "6.0.0",
-    "cordova-sqlite-storage": "3.2.0",
+    "@ionic/pro": "2.0.4",
+    "angularfire2": "^4.0.0-rc.1",
+    "cordova-android": "8.0.0",
+    "cordova-plugin-ionic-webview": "1.2.1",
     "core-js": "^2.5.4",
+    "firebase": "^4.2.0",
+    "font-awesome": "^4.7.0",
     "rxjs": "~6.5.1",
+    "rxjs-compat": "^6.5.2",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.29"
+    "zone.js": "~0.8.29",
+    "cordova-plugin-whitelist": "1.3.3",
+    "cordova-plugin-statusbar": "2.4.2",
+    "cordova-plugin-device": "2.0.2",
+    "cordova-plugin-splashscreen": "5.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.0.5"
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.13.8",
@@ -45,11 +53,10 @@
     "@ionic/angular-toolkit": "~1.5.1",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~10.14.2",
+    "@types/node": "~12.0.0",
     "codelyzer": "~4.5.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "^4.0.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -68,7 +75,6 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-sqlite-storage": {},
       "cordova-plugin-whitelist": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
@@ -77,7 +83,7 @@
       "cordova-plugin-ionic-keyboard": {}
     },
     "platforms": [
-      "browser"
+      "android"
     ]
   }
 }
